--- a/package.json
+++ b/package.json
@@ -41,10 +41,15 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "deps": "^1.0.0",
+    "dotenv": "^16.4.7",
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
+    "http-status-codes": "^2.3.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.471.1",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.5",
     "next": "15.1.4",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
@@ -54,9 +59,11 @@
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.1.3",
     "recharts": "^2.15.0",
+    "slugify": "^1.6.6",
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "validator": "^13.12.0",
     "vaul": "^1.1.2",
     "zod": "^3.24.1"
   },
