--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -47,6 +48,7 @@
     "embla-carousel-react": "^8.5.2",
     "http-status-codes": "^2.3.0",
     "input-otp": "^1.4.2",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.471.1",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.5",
@@ -57,7 +59,6 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.7",
-    "react-router-dom": "^7.1.3",
     "recharts": "^2.15.0",
     "slugify": "^1.6.6",
     "sonner": "^1.7.2",
@@ -70,11 +71,16 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@iconify/react": "^5.2.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/js-cookie": "^3.0.6",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
+    "framer-motion": "^12.4.2",
+    "js-cookie": "^3.0.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
