--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,8 @@
         { "source": "/api/(.*)", "destination": "/api/$1" },
         { "source": "/product/:slug", "destination": "/product/:slug" },
         { "source": "/(.*)", "destination": "/" }
+    ],
+    "redirects": [
+        { "source": "/not-found", "destination": "/404", "statusCode": 404 }
     ]
 }
