--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "http-status-codes": "^2.3.0",
     "input-otp": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.471.1",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.5",
@@ -77,6 +78,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.8",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
